# iii-connect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: json_rpc.rs  lib.rs  main.rs  server.rs
src/a2a/: handler.rs  mod.rs  types.rs
src/handlers/: initialize.rs  mod.rs  resources.rs  tools.rs
src/mcp/: handler.rs  mod.rs  prompts.rs
src/transport/: mod.rs  stdio.rs
src/worker_manager/: mod.rs
