# Copyright Motia LLC and/or licensed to Motia LLC under one or more
# contributor license agreements. Licensed under the Elastic License 2.0;
# you may not use this file except in compliance with the Elastic License 2.0.
# This software is patent protected. We welcome discussions - reach out at support@motia.dev
# See LICENSE and PATENTS files for details.

[package]
name = "iii-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP (Model Context Protocol) server for iii-engine"
license = "Elastic-2.0"
repository = "https://github.com/motiadev/iii-mcp"
homepage = "https://github.com/motiadev/iii-mcp"
documentation = "https://github.com/motiadev/iii-mcp#readme"
keywords = ["mcp", "model-context-protocol", "ai", "claude", "iii-engine"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.85"

[[bin]]
name = "iii-mcp"
path = "src/main.rs"

[dependencies]
iii-sdk = { path = "../iii" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "time", "process", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
