[package]
name = "iii-connect"
version = "0.2.0"
edition = "2024"
description = "MCP and A2A protocol worker for iii-engine"
license = "Apache-2.0"
repository = "https://github.com/iii-hq/iii-connect"
homepage = "https://github.com/iii-hq/iii-connect"
documentation = "https://github.com/iii-hq/iii-connect#readme"
keywords = ["mcp", "a2a", "model-context-protocol", "ai", "iii-engine"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.85"

[[bin]]
name = "iii-connect"
path = "src/main.rs"

[dependencies]
iii-sdk = "0.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "time", "process", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
